; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_help.c_ResizeTabChild.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_help.c_ResizeTabChild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_10__, %struct.TYPE_9__*, i32, %struct.TYPE_8__ }
%struct.TYPE_10__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_11__ = type { i32, i32, i32, i32 }

@TCM_GETITEMRECT = common dso_local global i32 0, align 4
@TCM_GETROWCOUNT = common dso_local global i32 0, align 4
@TAB_MARGIN = common dso_local global i32 0, align 4
@TAB_TOP_PADDING = common dso_local global i32 0, align 4
@TAB_RIGHT_PADDING = common dso_local global i32 0, align 4
@SWP_NOZORDER = common dso_local global i32 0, align 4
@SWP_NOACTIVATE = common dso_local global i32 0, align 4
@SM_CXVSCROLL = common dso_local global i32 0, align 4
@SM_CXBORDER = common dso_local global i32 0, align 4
@SM_CXEDGE = common dso_local global i32 0, align 4
@LVM_SETCOLUMNWIDTH = common dso_local global i32 0, align 4
@EDIT_HEIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_12__*, i32)* @ResizeTabChild to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ResizeTabChild(%struct.TYPE_12__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_12__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_11__, align 4
  %9 = alloca %struct.TYPE_11__, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %3, align 8
  store i32 %1, i32* %4, align 4
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 1
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %19, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %5, align 4
  %26 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %26, i32 0, i32 3
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @GetClientRect(i32 %29, %struct.TYPE_11__* %8)
  %31 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @TCM_GETITEMRECT, align 4
  %35 = ptrtoint %struct.TYPE_11__* %9 to i32
  %36 = call i32 @SendMessageW(i32 %33, i32 %34, i32 0, i32 %35)
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* @TCM_GETROWCOUNT, align 4
  %41 = call i32 @SendMessageW(i32 %39, i32 %40, i32 0, i32 0)
  store i32 %41, i32* %10, align 4
  %42 = load i32, i32* @TAB_MARGIN, align 4
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  store i32 %42, i32* %43, align 4
  %44 = load i32, i32* @TAB_TOP_PADDING, align 4
  %45 = load i32, i32* %10, align 4
  %46 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 2
  %47 = load i32, i32* %46, align 4
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = sub nsw i32 %47, %49
  %51 = mul nsw i32 %45, %50
  %52 = add nsw i32 %44, %51
  %53 = load i32, i32* @TAB_MARGIN, align 4
  %54 = add nsw i32 %52, %53
  %55 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 1
  store i32 %54, i32* %55, align 4
  %56 = load i32, i32* @TAB_RIGHT_PADDING, align 4
  %57 = load i32, i32* @TAB_MARGIN, align 4
  %58 = add nsw i32 %56, %57
  %59 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 3
  %60 = load i32, i32* %59, align 4
  %61 = sub nsw i32 %60, %58
  store i32 %61, i32* %59, align 4
  %62 = load i32, i32* @TAB_MARGIN, align 4
  %63 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 2
  %64 = load i32, i32* %63, align 4
  %65 = sub nsw i32 %64, %62
  store i32 %65, i32* %63, align 4
  %66 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 3
  %67 = load i32, i32* %66, align 4
  %68 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = sub nsw i32 %67, %69
  store i32 %70, i32* %6, align 4
  %71 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 2
  %72 = load i32, i32* %71, align 4
  %73 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 1
  %74 = load i32, i32* %73, align 4
  %75 = sub nsw i32 %72, %74
  store i32 %75, i32* %7, align 4
  %76 = load i32, i32* %5, align 4
  %77 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  %78 = load i32, i32* %77, align 4
  %79 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 1
  %80 = load i32, i32* %79, align 4
  %81 = load i32, i32* %6, align 4
  %82 = load i32, i32* %7, align 4
  %83 = load i32, i32* @SWP_NOZORDER, align 4
  %84 = load i32, i32* @SWP_NOACTIVATE, align 4
  %85 = or i32 %83, %84
  %86 = call i32 @SetWindowPos(i32 %76, i32* null, i32 %78, i32 %80, i32 %81, i32 %82, i32 %85)
  %87 = load i32, i32* %4, align 4
  switch i32 %87, label %163 [
    i32 129, label %88
    i32 128, label %112
  ]

88:                                               ; preds = %2
  %89 = load i32, i32* @SM_CXVSCROLL, align 4
  %90 = call i32 @GetSystemMetrics(i32 %89)
  store i32 %90, i32* %11, align 4
  %91 = load i32, i32* @SM_CXBORDER, align 4
  %92 = call i32 @GetSystemMetrics(i32 %91)
  store i32 %92, i32* %12, align 4
  %93 = load i32, i32* @SM_CXEDGE, align 4
  %94 = call i32 @GetSystemMetrics(i32 %93)
  store i32 %94, i32* %13, align 4
  %95 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %96 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %95, i32 0, i32 1
  %97 = load %struct.TYPE_9__*, %struct.TYPE_9__** %96, align 8
  %98 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %97, i64 129
  %99 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %98, i32 0, i32 0
  %100 = load i32, i32* %99, align 4
  %101 = load i32, i32* @LVM_SETCOLUMNWIDTH, align 4
  %102 = load i32, i32* %6, align 4
  %103 = load i32, i32* %11, align 4
  %104 = sub nsw i32 %102, %103
  %105 = load i32, i32* %12, align 4
  %106 = mul nsw i32 2, %105
  %107 = sub nsw i32 %104, %106
  %108 = load i32, i32* %13, align 4
  %109 = mul nsw i32 2, %108
  %110 = sub nsw i32 %107, %109
  %111 = call i32 @SendMessageW(i32 %100, i32 %101, i32 0, i32 %110)
  br label %163

112:                                              ; preds = %2
  %113 = load i32, i32* @SM_CXVSCROLL, align 4
  %114 = call i32 @GetSystemMetrics(i32 %113)
  store i32 %114, i32* %14, align 4
  %115 = load i32, i32* @SM_CXBORDER, align 4
  %116 = call i32 @GetSystemMetrics(i32 %115)
  store i32 %116, i32* %15, align 4
  %117 = load i32, i32* @SM_CXEDGE, align 4
  %118 = call i32 @GetSystemMetrics(i32 %117)
  store i32 %118, i32* %16, align 4
  store i32 0, i32* %17, align 4
  %119 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %120 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %119, i32 0, i32 0
  %121 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %120, i32 0, i32 1
  %122 = load i32, i32* %121, align 4
  %123 = load i32, i32* %17, align 4
  %124 = load i32, i32* %6, align 4
  %125 = load i32, i32* @EDIT_HEIGHT, align 4
  %126 = load i32, i32* @SWP_NOZORDER, align 4
  %127 = load i32, i32* @SWP_NOACTIVATE, align 4
  %128 = or i32 %126, %127
  %129 = call i32 @SetWindowPos(i32 %122, i32* null, i32 0, i32 %123, i32 %124, i32 %125, i32 %128)
  %130 = load i32, i32* @EDIT_HEIGHT, align 4
  %131 = load i32, i32* @TAB_MARGIN, align 4
  %132 = add nsw i32 %130, %131
  %133 = load i32, i32* %17, align 4
  %134 = add nsw i32 %133, %132
  store i32 %134, i32* %17, align 4
  %135 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %136 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %135, i32 0, i32 0
  %137 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %136, i32 0, i32 0
  %138 = load i32, i32* %137, align 8
  %139 = load i32, i32* %17, align 4
  %140 = load i32, i32* %6, align 4
  %141 = load i32, i32* %7, align 4
  %142 = load i32, i32* %17, align 4
  %143 = sub nsw i32 %141, %142
  %144 = load i32, i32* @SWP_NOZORDER, align 4
  %145 = load i32, i32* @SWP_NOACTIVATE, align 4
  %146 = or i32 %144, %145
  %147 = call i32 @SetWindowPos(i32 %138, i32* null, i32 0, i32 %139, i32 %140, i32 %143, i32 %146)
  %148 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %149 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %148, i32 0, i32 0
  %150 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %149, i32 0, i32 0
  %151 = load i32, i32* %150, align 8
  %152 = load i32, i32* @LVM_SETCOLUMNWIDTH, align 4
  %153 = load i32, i32* %6, align 4
  %154 = load i32, i32* %14, align 4
  %155 = sub nsw i32 %153, %154
  %156 = load i32, i32* %15, align 4
  %157 = mul nsw i32 2, %156
  %158 = sub nsw i32 %155, %157
  %159 = load i32, i32* %16, align 4
  %160 = mul nsw i32 2, %159
  %161 = sub nsw i32 %158, %160
  %162 = call i32 @SendMessageW(i32 %151, i32 %152, i32 0, i32 %161)
  br label %163

163:                                              ; preds = %2, %112, %88
  ret void
}

declare dso_local i32 @GetClientRect(i32, %struct.TYPE_11__*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @SetWindowPos(i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @GetSystemMetrics(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
